--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=https://public-repo-assignment3-d29r.vercel.app/
 
 DATABASE_URL="mongodb+srv://Toll:0001007171@cluster0.6twwb.mongodb.net/moviesDB?retryWrites=true&w=majority"
